--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ h1 {
     letter-spacing: 3px;
     color: rgb(174, 131, 214);
     text-align: center;
-    font-size: 100px;
+    font-size: 70px;
     margin: 50px;
     letter-spacing: 8px;
 }
@@ -53,17 +53,19 @@ a {
 
 .container {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 1000px;
-    height: 700px;
+    width: 80%;
+    max-width: 70rem;
     overflow: hidden;
     border-radius: 5px;
     margin: 50px;
+    background-color: pink;
+    padding: 1em;
 }
 
 .button-grid {
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 100px;
+    grid-template-columns: repeat(2, 0, 1fr);
+    gap: 10px;
     margin: 20px 0;
 }
 
@@ -97,6 +99,10 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  #score {
+    font-size: 30px;
   }
 
 
