--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-/*global settings*/
+/* global settings */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@300&display=swap');
 
 *,
@@ -18,6 +18,7 @@ body {
     min-height: 100vh;
 }
 
+
 main {
     display: flex;
     justify-content: center;
@@ -25,7 +26,7 @@ main {
     flex: 1 0 auto;
 }
 
-/* Heading*/
+/* Heading */
 h1 {
     color: black;
     text-transform: uppercase;
@@ -45,7 +46,7 @@ a {
 
 /* Quiz */
 #question {
-    font-size: 80px;
+    font-size: 50px;
     text-align: center;
     letter-spacing: 3px;
     margin: 40px 0;
@@ -86,12 +87,22 @@ a {
 
 .button:hover  {
     background-color: beige;
+    transition: 0.5s;
+}
+.button.correct {
+    color: green;
 }
 
-.button.correct {
-    color:  green;
-}
+
 .button.wrong {
+    color:red;
+}
+
+.correct div {
+    background-color:green;
+}
+
+.wrong div {
     background-color: red;
 }
 
@@ -101,10 +112,9 @@ a {
     align-items: center;
   }
 
-  #score {
-    font-size: 30px;
-  }
-
+.hide {
+    display: none;
+}
 
 /*footer*/
 .socialmedia {
@@ -133,8 +143,4 @@ footer {
     background-color: rgb(58, 55, 55);
     color: white;
     padding: 1em;
-}
-
-.hide {
-    display:none;
 }
