Add restart button and event listener

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,145 +1,149 @@
-/* global settings */
+/* Global Settings */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@300&display=swap');
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    width: 100%;
-    font-family: bebas neue;
-    background-color: rgba(255, 255, 255, 0.846);
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  font-family: 'Bebas Neue', sans-serif;
+  background-color: rgba(255, 255, 255, 0.846);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 auto;
 }
 
 /* Heading */
 h1 {
-    color: black;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    color: rgb(174, 131, 214);
-    text-align: center;
-    font-size: 70px;
-    margin: 50px;
-    letter-spacing: 8px;
+  text-transform: uppercase;
+  color: #ae83d6;
+  text-align: center;
+  font-size: 70px;
+  margin: 50px;
+  letter-spacing: 8px;
 }
 
-a {
-    font-size: 40px;
-    color: rgb(174, 131, 214);
-    text-decoration: none;
-}
-
-/* Quiz */
-#question {
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 3px;
-    margin: 40px 0;
-}
-
+/*The Quiz container div and question text*/
 .container {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 80%;
-    max-width: 70rem;
-    overflow: hidden;
-    border-radius: 5px;
-    margin: 50px;
-    background-color: pink;
-    padding: 1em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 80%;
+  max-width: 700px;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color: pink;
+  padding: 20px;
+}
+#question {
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: 3px;
+  margin: 40px 0;
 }
 
-.button-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 0, 1fr);
-    gap: 10px;
-    margin: 20px 0;
+/*The Quiz buttons*/
+.button-container {
+    display: flex;
+    justify-content: center;
 }
 
 .button {
-    font-family: bebas neue;
+    font-family: 'Bebas Neue', sans-serif;
     letter-spacing: 4px;
     background-color: rgb(174, 131, 214);
-    padding: 20px 40px;
+    padding: 20px;
     outline: none;
     border-radius: 3px;
-    padding: 20px 20px;
     font-size: 20px;
+    display: block;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.start-button, .next-button {
-    padding: 30px 50px;
+.next-button {
+    color: white;
 }
 
-.button:hover  {
-    background-color: beige;
+.start-button {
+    margin: 0 auto;
+}
+
+.button-grid {
+    display: block;
+    margin: 20px 0;
+}
+  
+.button:hover {
+    background-color:rgb(202, 167, 235);
     transition: 0.5s;
 }
+
 .button.correct {
-    color: green;
+  background-color: #a6e775;
 }
 
-.button.wrong {
-    color:red;
-}
-
-.correct div {
-    background-color:green;
-}
-
-.wrong div {
-    background-color: red;
+.button.incorrect {
+  background-color: #ff7f7f;
 }
 
 .controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-.hide {
-    display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/*footer*/
+/* The score text in the bottom of the quiz */
+#score {
+  text-align: center;
+  font-size: 30px;
+}
+/*Hides quiz-box and next-button on landing page.*/
+.hide {
+  display: none;
+}
+/* Style for score text displaying when quiz is finished */
+.end-quiz {
+  text-align: center;
+}
+
+/* Social media icons in the footer */
 .socialmedia {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 15rem;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 150px;
 }
 
 .socialmedia,
 li a:hover {
-    color: white;
+  color:rgb(202, 167, 235);
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
+a {
+    font-size: 40px;
+    color: #ae83d6;
+    text-decoration: none;
+}
+
+/*Footer*/
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    background-color: rgb(58, 55, 55);
-    color: white;
-    padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
