--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ h1 {
   background-color: pink;
   padding: 20px;
 }
+
 #question {
   font-size: 50px;
   text-align: center;
@@ -53,40 +54,41 @@ h1 {
 
 /*The Quiz buttons*/
 .button-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .button {
-    font-family: 'Bebas Neue', sans-serif;
-    letter-spacing: 4px;
-    background-color: rgb(174, 131, 214);
-    padding: 20px;
-    outline: none;
-    border-radius: 3px;
-    font-size: 20px;
-    display: block;
-    margin-bottom: 10px;
-    width: 100%;
-    box-sizing: border-box;
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 4px;
+  background-color: rgb(174, 131, 214);
+  padding: 20px;
+  outline: none;
+  border-radius: 3px;
+  font-size: 20px;
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .next-button {
-    color: white;
+  color: white;
+  background-color: rgba(218, 162, 235, 0.875);
 }
 
 .start-button {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .button-grid {
-    display: block;
-    margin: 20px 0;
+  display: block;
+  margin: 20px 0;
 }
-  
+
 .button:hover {
-    background-color:rgb(202, 167, 235);
-    transition: 0.5s;
+  background-color: rgb(202, 167, 235);
+  transition: 0.5s;
 }
 
 .button.correct {
@@ -108,10 +110,12 @@ h1 {
   text-align: center;
   font-size: 30px;
 }
+
 /*Hides quiz-box and next-button on landing page.*/
 .hide {
   display: none;
 }
+
 /* Style for score text displaying when quiz is finished */
 .end-quiz {
   text-align: center;
@@ -128,7 +132,7 @@ h1 {
 
 .socialmedia,
 li a:hover {
-  color:rgb(202, 167, 235);
+  color: rgb(202, 167, 235);
 }
 
 ul {
@@ -136,9 +140,9 @@ ul {
 }
 
 a {
-    font-size: 40px;
-    color: #ae83d6;
-    text-decoration: none;
+  font-size: 40px;
+  color: #ae83d6;
+  text-decoration: none;
 }
 
 /*Footer*/
